--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
     Нажмите, чтобы скачать или открыть index.html:
     <a href="index.html">Файл проверки работы с кириллицей .html</a>
   </p>
-
+<a href="https://www.flaticon.com/ru/free-icons/-" title="рождественский орнамент иконки">Рождественский орнамент иконки от Pixelmeetup - Flaticon</a>
 </body>
 </html>
