--- a/Congratulations2026.html
+++ b/Congratulations2026.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Заголовок страницы</title>
+    <title>Поздравление!</title>
 </head>
 <body>
+Qwen3-Max
+1:43 PM
 
+<p>Приближается один из любимых праздников в России — Новый год. Вся страна оживает: на улицах зажигаются огни гирлянд, в магазинах появляются ёлочные игрушки и мандарины, 
+    а в домах начинается подготовка к волшебству. Люди наряжают ёлки, пишут списки подарков и с нетерпением ждут боя курантов, ведь именно в эту ночь сбываются самые заветные желания.</p>
+
+  <p>  В предновогодние дни особенно популярны всевозможные развлечения для всей семьи. Многие любят решать кроссворды — они помогают не только скоротать время, 
+      но и потренировать память и эрудицию. Среди них особенно выделяются тематические головоломки: русский кроссворд с вопросами о традициях праздника и английский кроссворд с зимней лексикой. 
+      Такие задания часто включают в новогодние викторины в школах и на корпоративах.</p>
+
+<p>Новый год в России — это время чуда, доброты и семейного тепла. Под ёлкой обязательно появляются подарки, а на столе — оливье, селёдка под шубой и, 
+    конечно, бокал шампанского под бой кремлёвских курантов. Независимо от возраста, каждый человек в эти дни снова становится немного ребёнком, верящим в Деда Мороза, снегурочку и то, что наступающий год обязательно будет лучше предыдущего.
+</p>
 </body>
 </html>
