--- a/index.html
+++ b/index.html
@@ -4,13 +4,22 @@
   <title>Моя презинтация</title>
 </head>
 <body>
+<h2> дату сегодня , 2025</h2>
+<img src=“Icons/имя файла вашей картинки.png” alt=“Новый год”>
+Поздравление с Наступающим 2026 годом читайте <a href=“Congratulations2026.html”> здесь.</a>
+<h2> 15 октября , 2025</h2>
+<p>
+Я сделала Новогодние кроссворды для сайта <a href=“http://адрес сайта друга”  title=“Блог моего друга”Сайт моего друга</a>
+</p>
+<h2> 1 сентября , 2025</h2>
+<blockquote>Путешествие в тысячу миль начинается с одного шага (Лао Цзы) </blockquote>
+<p>
+Оставляю в прошлом скучную неинтересную локальную файловую систему ради Всемирной паутины.
+</p>
 
-  <p>
-    Нажмите, чтобы скачать или открыть презентацию:
-    <a href="СетьВводный.pptx">Презентация в формате .pptx</a>
-    Нажмите, чтобы скачать или открыть index.html:
-    <a href="index.html">Файл проверки работы с кириллицей .html</a>
-  </p>
+  
+<p>Иконки:  
 <a href="https://www.flaticon.com/ru/free-icons/-" title="рождественский орнамент иконки">Рождественский орнамент иконки от Pixelmeetup - Flaticon</a>
+</p>  
 </body>
 </html>
