--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <title>Моя презинтация</title>
 </head>
 <body>
-<h2> дату сегодня , 2025</h2>
-<img src=“Icons/имя файла вашей картинки.png” alt=“Новый год”>
-Поздравление с Наступающим 2026 годом читайте <a href=“Congratulations2026.html”> здесь.</a>
+  <h2> 13 01 , 2026</h2>
+<h2> домен - yana-amelkina github io ./ </h2>
+  
+</p> < strong><a href="mailto:yana.amelkina@bk.ru">напишите мне 
 <h2> 15 октября , 2025</h2>
 <p>
 Я сделала Новогодние кроссворды для сайта <a href=“http://адрес сайта друга”  title=“Блог моего друга”Сайт моего друга</a>
