--- a/index.html
+++ b/index.html
@@ -33,3 +33,8 @@
  </p>МОЯ ФАМИЛИЯ С КЛЮЧЕМ ЦЕРАЗЯ - 10< strong>АМЕЛЬКИНА-КЦПХЖФТЧК < strong></p>
   </p> 
  <body> 
+<h2> 20 января , 2026</h2>
+</p>p =7</p>
+ </p>q =11 </p>
+ </p>< strong>закрытый ключ(e,n)=(77,43) им можно зашифровать < strong></p>
+ </p>< strong>открый ключ(d,n)=(77,7) им можно расшифровать < strong></p>
